# glitch-classification-lightning

./: .gitignore  README.md  best_model.ckpt  lightning.py  pyproject.toml
lightning_logs/version_0/: metrics.csv
lightning_logs/version_0/checkpoints/: epoch=1-step=138.ckpt
lightning_logs/version_1/: metrics.csv
lightning_logs/version_1/checkpoints/: epoch=1-step=138.ckpt
